--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,72 +1,104 @@
 <div class="box">
-  <!--<div class="box-header">-->
-  <!--<h3 class="box-title">Data Table With Full Features</h3>-->
-  <!--</div>-->
-  <!-- /.box-header -->
   <div class="box-body">
-    <button id="btnFind" class="btn btn-info" (click)="find()">
-      <i class="fa fa-search" aria-hidden="true"></i>
-      查询
-    </button>
-    <button id="btnUpload" class="btn btn-info" (click)="showDialog()">
-      <i class="fa fa-upload" aria-hidden="true"></i>
-      上载
-    </button>
-    <!--<hr>-->
-    <table id="example1" class="table table-bordered table-striped">
-      <thead>
-        <tr>
-          <th>序号</th>
-          <th>文件名</th>
-          <th>标题</th>
-          <th>上传日期</th>
-          <th>大小</th>
-          <th>文件类型</th>
-          <th>下载</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- i=index + 1 -->
-        <!-- 用ngFor加载的数据，未能被dataTable 函数处理到 -->
-        <tr *ngFor="let file of files;let i=index">
-          <td>{{i+1}}</td>
-          <td>{{file.fileName}}</td>
-          <td>{{file.title}}</td>
-          <td>{{file.upLoadDate}}</td>
-          <td>{{file.size}}</td>
-          <td>{{file.fileType}}</td>
-          <td>
-            <a href="{{file.downloadLink}}" download="{{file.fileName}}">下载</a>
-          </td>
-        </tr>
-      </tbody>
-      <!--<tfoot>-->
-      <!--<tr>-->
-      <!--<th>Rendering engine</th>-->
-      <!--<th>Browser</th>-->
-      <!--<th>Platform(s)</th>-->
-      <!--<th>Engine version</th>-->
-      <!--<th>CSS grade</th>-->
-      <!--</tr>-->
-      <!--</tfoot>-->
-    </table>
-  </div>
-  <!-- /.box-body -->
-</div>
-<!-- /.box -->
+    <div class="btnCol">
+      <button id="btnFind" class="btn btn-info" (click)="find()">
+        <i class="fa fa-search" aria-hidden="true"></i>
+        查询
+      </button>
+      <button id="btnUpload" class="btn btn-info" (click)="showDialog()">
+        <i class="fa fa-upload" aria-hidden="true"></i>
+        上载
+      </button>
+    </div>
 
-<!--模态框-->
-<!--<p-dialog [(visible)]="display">-->
-<!--<p-header>-->
-<!--文件上传-->
-<!--</p-header>-->
-<!--<div>-->
-<!--<input id="input-id" type="file" multiple>-->
-<!--</div>-->
-<!--<p-footer>-->
-<!--<button type="button" class="btn btn-primary btn-sm" (click)="close()">关闭</button>-->
-<!--</p-footer>-->
-<!--</p-dialog>-->
+    <!-- 表格 -->
+    <div class="box">
+      <div class="box-header">
+        <h3 class="box-title">文件列表</h3>
+
+        <div class="box-tools">
+          <div class="input-group input-group-sm" style="width: 150px;">
+            <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+
+            <div class="input-group-btn">
+              <button type="submit" class="btn btn-default">
+                <i class="fa fa-search"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.box-header -->
+      <div class="box-body table-responsive no-padding">
+        <table class="table table-hover">
+
+          <thead>
+            <!-- 用循环写就不行？ -->
+            <!-- <tr *ngFor="let col of cols">
+              <th>{{col.header}}</th>
+            </tr> -->
+            <tr>
+              <th>序号</th>
+              <th>文件名</th>
+              <th>标题</th>
+              <th>上传日期</th>
+              <th>大小</th>
+              <th>文件类型</th>
+              <th>下载</th>
+            </tr>
+          </thead>
+
+          <tbody>
+
+            <tr *ngFor="let file of files;let i=index">
+              <td>{{i+1}}</td>
+              <td>{{file.fileName}}</td>
+              <td>{{file.title}}</td>
+              <td>{{file.upLoadDate}}</td>
+              <td>{{file.size}}</td>
+              <td>{{file.fileType}}</td>
+              <td>
+                <a href="{{file.downloadLink}}" download="{{file.fileName}}">下载</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <!-- /.box-body -->
+    </div>
+    <!-- <div class="content-section implementation">
+      <p-table #dt [columns]="cols" [value]="files" [paginator]="true" [rows]="2">
+        <ng-template pTemplate="caption">
+          <div style="text-align: right">
+            <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+            <input type="text" pInputText size="50" placeholder="查找文件" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+          </div>
+        </ng-template>
+        <ng-template pTemplate="header" let-columns>
+          <tr>
+            <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+              {{col.header}}
+              <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-file>
+          <tr>
+            <td>{{index+1}}</td>
+    <td>{{file.fileName}}</td>
+    <td>{{file.title}}</td>
+    <td>{{file.upLoadDate}}</td>
+    <td>{{file.size}}</td>
+    <td>{{file.fileType}}</td>
+    <td>
+      <a href="{{file.downloadLink}}" download="{{file.fileName}}">下载</a>
+    </td>
+    </tr>
+    </ng-template>
+    </p-table>
+  </div> -->
+  </div>
+</div>
 
 <!--上传文件模态框-->
 <div class="modal fade" tabindex="-1" role="dialog" id="fileupload-modal">
@@ -85,7 +117,6 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">关闭</button>
-        <!--<button type="button" class="btn btn-primary">Save changes</button>-->
       </div>
     </div>
     <!-- /.modal-content -->
