--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,7 +9,7 @@
         <img src="../../assets/img/user2-160x160.jpg" class="img-circle" alt="User Image">
       </div> -->
       <div class="pull-left info" *ngIf="!!userName">
-        <p>欢迎 {{userName}}</p>
+        <!-- <p class="welcome"><b>{{userName}}</b></p> -->
         <!-- Status -->
         <!-- <a href="#">
           <i class="fa fa-circle text-success"></i> 在线
