--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -14,16 +14,16 @@
     <!-- 表格 -->
     <div class="box">
       <div class="box-header">
-        <h3 class="box-title">文件列表</h3>
+        <h3 class="box-title"></h3>
 
         <div class="box-tools">
           <div class="input-group input-group-sm" style="width: 150px;">
-            <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
+            <input type="text" name="table_search" [formControl]="fileFilterControl" class="form-control pull-right" placeholder="文件名">
 
             <div class="input-group-btn">
-              <button type="submit" class="btn btn-default">
+              <div class="btn btn-default" style="cursor:default">  
                 <i class="fa fa-search"></i>
-              </button>
+              </div>
             </div>
           </div>
         </div>
@@ -31,9 +31,8 @@
       <!-- /.box-header -->
       <div class="box-body table-responsive no-padding">
         <table class="table table-hover">
-
           <thead>
-            <!-- 用循环写就不行？ -->
+            <!-- 用循环写就不行？表头竖排 -->
             <!-- <tr *ngFor="let col of cols">
               <th>{{col.header}}</th>
             </tr> -->
@@ -41,7 +40,7 @@
               <th>序号</th>
               <th>文件名</th>
               <th>标题</th>
-              <th>上传日期</th>
+              <th class="sorting">上传日期<a (click)="toggle('upLoadDate')"><i [class]="sortClass"></i></a></th>
               <th>大小</th>
               <th>文件类型</th>
               <th>下载</th>
@@ -50,7 +49,7 @@
 
           <tbody>
 
-            <tr *ngFor="let file of files;let i=index">
+            <tr *ngFor="let file of files | fileFilter: 'fileName': keyWord | fileSort: sortField: isAsc; let i=index">
               <td>{{i+1}}</td>
               <td>{{file.fileName}}</td>
               <td>{{file.title}}</td>
