--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-box">
   <div class="login-logo">
-    <a href="../../index2.html"><b>长沙市中心医院</b></a>
+    <a href=""><b>长沙市中心医院</b></a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
@@ -19,12 +19,12 @@
       </div>
       <div class="row">
         <div class="col-xs-8">
-          <div class="checkbox icheck">
+          <!-- <div class="checkbox icheck">
             <label>
               <input type="checkbox" #remember id="rememberMe">
               <span class="remember">记住我</span>
             </label>
-          </div>
+          </div> -->
         </div>
         <!-- /.col -->
         <div class="col-xs-4">
