--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper" style="min-height: 331.364px;">
+<div class="content-wrapper" style="min-height: 100%;">
   <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
