--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -5,7 +5,7 @@
         <i class="fa fa-search" aria-hidden="true"></i>
         查询
       </button>
-      <button id="btnUpload" class="btn btn-info" (click)="openModal(template)">
+      <button id="btnUpload" class="btn btn-info" data-toggle="modal" data-target="#myModal">
         <i class="fa fa-upload" aria-hidden="true"></i>
         上载
       </button>
@@ -69,19 +69,21 @@
   </div>
 </div>
 
-<!-- ng-x 模态框 -->
-<ng-template #template>
-  <div class="modal-header">
-    <h4 class="modal-title pull-left">文件上传</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-      <span aria-hidden="true">&times;</span>
-    </button>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">文件上传</h4>
+      </div>
+      <div class="modal-body">
+        <!--上传-->
+        <input type="file" id="input-id" name="fileInput">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+      </div>
+    </div>
   </div>
-  <div class="modal-body">
-    <!--上传-->
-    <form action="/upload" method="post" enctype="multipart/form-data">
-      <input type="file" id="inputFile" name="fileInput" class="inline">
-      <input type="submit" class="btn btn-default btn-sm mr_left" value="上传">
-    </form>
-  </div>
-</ng-template>
+</div>
