--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,26 +1,3 @@
 <div class="content-wrapper" style="min-height: 100%;">
-  <!-- Content Header (Page header) -->
-  <section class="content-header">
-    <h1>
-      内外网文件转换
-      <small>个人文件管理</small>
-    </h1>
-    <!--<ol class="breadcrumb">-->
-      <!--<li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>-->
-      <!--<li class="active">Here</li>-->
-    <!--</ol>-->
-  </section>
-
-  <!-- Main content -->
-  <section class="content">
-
-    <!--------------------------
-      | Your Page Content Here |
-      -------------------------->
-
-    <app-table></app-table>
-
-  </section>
-  <!-- /.content -->
-
+  <router-outlet></router-outlet>
 </div>
