--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,73 +1,97 @@
-<div class="box">
-  <div class="box-body">
-    <div class="btnCol">
-      <button id="btnFind" class="btn btn-info" (click)="find()">
-        <i class="fa fa-search" aria-hidden="true"></i>
-        查询
-      </button>
-      <button id="btnUpload" class="btn btn-info" data-toggle="modal" data-target="#myModal">
-        <i class="fa fa-upload" aria-hidden="true"></i>
-        上载
-      </button>
-    </div>
+<!-- Content Header (Page header) -->
+<section class="content-header">
+  <h1 *ngIf="head">
+    {{head}}
+    <small *ngIf="subhead">{{subhead}}</small>
+  </h1>
+  <!--<ol class="breadcrumb">-->
+  <!--<li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>-->
+  <!--<li class="active">Here</li>-->
+  <!--</ol>-->
+</section>
 
-    <!-- 表格 -->
-    <div class="box">
-      <div class="box-header">
-        <h3 class="box-title"></h3>
+<!-- Main content -->
+<section class="content">
 
-        <div class="box-tools">
-          <div class="input-group input-group-sm" style="width: 150px;">
-            <input type="text" name="table_search" [formControl]="fileFilterControl" class="form-control pull-right"
-              placeholder="文件名">
+  <!--------------------------
+      | Your Page Content Here |
+      -------------------------->
+  <div class="box">
+    <div class="box-body">
+      <div class="btnCol">
+        <button id="btnFind" class="btn btn-info" (click)="find()">
+          <i class="fa fa-search" aria-hidden="true"></i>
+          查询
+        </button>
+        <button id="btnUpload" class="btn btn-info" data-toggle="modal" data-target="#myModal">
+          <i class="fa fa-upload" aria-hidden="true"></i>
+          上载
+        </button>
+      </div>
 
-            <div class="input-group-btn">
-              <div class="btn btn-default" style="cursor:default">
-                <i class="fa fa-search"></i>
+      <!-- 表格 -->
+      <div class="box">
+        <div class="box-header">
+          <h3 class="box-title"></h3>
+
+          <div class="box-tools">
+            <div class="input-group input-group-sm" style="width: 150px;">
+              <input type="text" name="table_search" [formControl]="fileFilterControl" class="form-control pull-right"
+                placeholder="文件名">
+
+              <div class="input-group-btn">
+                <div class="btn btn-default" style="cursor:default">
+                  <i class="fa fa-search"></i>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <!-- /.box-header -->
-      <div class="box-body table-responsive no-padding">
-        <table class="table table-hover">
-          <thead>
-            <!-- 用循环写就不行？表头竖排 -->
-            <!-- <tr *ngFor="let col of cols">
-              <th>{{col.header}}</th>
-            </tr> -->
-            <tr>
-              <th>序号</th>
-              <th>文件名</th>
-              <th>标题</th>
-              <th class="sorting">上传日期<a (click)="toggle('SCRQ')"><i [class]="sortClass"></i></a></th>
-              <th>大小</th>
-              <th>文件类型</th>
-              <th>下载</th>
-            </tr>
-          </thead>
+        <!-- /.box-header -->
+        <div class="box-body table-responsive no-padding">
+          <table class="table table-hover">
+            <thead>
+              <!-- 用循环写就不行？表头竖排 -->
+              <!-- <tr *ngFor="let col of cols">
+                    <th>{{col.header}}</th>
+                  </tr> -->
+              <tr>
+                <th>序号</th>
+                <th>文件名</th>
+                <th>标题</th>
+                <th class="sorting">上传日期<a (click)="toggle('SCRQ')"><i [class]="sortClass"></i></a></th>
+                <th>大小</th>
+                <th>文件类型</th>
+                <th>下载</th>
+              </tr>
+            </thead>
 
-          <tbody>
+            <tbody>
 
-            <tr *ngFor="let file of files | fileFilter: 'SWJM': keyWord | fileSort: sortField: isAsc; let i=index">
-              <td>{{i+1}}</td>
-              <td>{{file.SWJM}}</td>
-              <td>{{file.STITLE}}</td>
-              <td>{{file.SCRQ}}</td>
-              <td>{{file.WJDX}}</td>
-              <td>{{file.WJLX}}</td>
-              <td>
-                <a href="/EzaRest{{file.SPATH}}/{{file.SWJM}}"><i class="fa fa-download"></i>下载</a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+              <tr *ngFor="let file of files | fileFilter: 'SWJM': keyWord | fileSort: sortField: isAsc; let i=index">
+                <td>{{i+1}}</td>
+                <td>{{file.SWJM}}</td>
+                <td>{{file.STITLE}}</td>
+                <td>{{file.SCRQ}}</td>
+                <td>{{file.WJDX}}</td>
+                <td>{{file.WJLX}}</td>
+                <td>
+                  <a href="/EzaRest{{file.SPATH}}/{{file.SWJM}}"><i class="fa fa-download"></i>下载</a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <!-- /.box-body -->
       </div>
-      <!-- /.box-body -->
     </div>
   </div>
-</div>
+
+
+</section>
+<!-- /.content -->
+
+
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
