--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -91,23 +91,7 @@
 </section>
 <!-- /.content -->
 
-
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">文件上传</h4>
-      </div>
-      <div class="modal-body">
-        <!--上传-->
-        <input type="file" id="input-id" name="fileInput">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-      </div>
-    </div>
-  </div>
-</div>
+<!-- 模态框 -->
+<app-modal-box modalTitle="文件上传">
+  <app-file-input class="fileInput"></app-file-input>
+</app-modal-box>
